[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/interaction_area.gd" type="Script" id=1]
[ext_resource path="res://fonts/font_10.tres" type="DynamicFont" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_top = 2.0
bg_color = Color( 0.0627451, 0.0588235, 0.0588235, 0.537255 )

[node name="interaction_area" type="Area2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -48.1842
margin_top = -30.7559
margin_right = 47.8158
margin_bottom = -14.7559
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "Talk"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="." to="." method="_on_interaction_area_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_interaction_area_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_interaction_area_mouse_exited"]
